--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,8 @@
-title: Hacker theme
+title: MsF_V3n0M Page
 description: Hacker is a theme for GitHub Pages.
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-hacker
+
+remote_theme: pages-themes/hacker@v0.2.0
+plugins: - jekyll-remote-theme
