--- a/_config.yml
+++ b/_config.yml
@@ -5,4 +5,5 @@ google_analytics:
 theme: jekyll-theme-hacker
 
 remote_theme: pages-themes/hacker@v0.2.0
-plugins: - jekyll-remote-theme
+plugins:
+- jekyll-remote-theme
