--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: MsF_V3n0M Page
-description: Hacker is a theme for GitHub Pages.
-show_downloads: true
+title: MsF_V3n0M Site
+description: Un sitio Web para aprender sobre ciberseguridad.
+show_downloads: false
 google_analytics:
 theme: jekyll-theme-hacker
 
