--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: MsF_V3n0M Site
 description: Un sitio Web para aprender sobre ciberseguridad.
-show_downloads: false
+show_Redes: tru
 google_analytics:
 theme: jekyll-theme-hacker
 
